force-app/main/default/objects/ServiceAudit__c/ServiceAudit__c.object-meta.xml
<CustomObject>
    <label>Service Audit</label>
    <nameField>
        <displayFormat>AUDIT-{00000}</displayFormat>
        <label>Service Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>