force-app/main/default/objects/ServiceAudit__c/fields/ChangedAt__c.field-meta.xml
<CustomField>
    <fullName>ChangedAt__c</fullName>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>