force-app/main/default/objects/ServiceAudit__c/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <label>New Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>