force-app/main/default/objects/ServiceAudit__c/fields/ServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequest__c</fullName>
    <label>Service Request</label>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Service Audits</relationshipLabel>
    <relationshipName>ServiceAudits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>